ocp_manifests/networking/net-policy/allow-from-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-ingress
spec:
  podSelector:
    matchLabels:
      run: web  # Targets the "web" pod
  ingress:
    - from:   # Allows traffic from ANY source (inside/outside cluster)
      - podSelector:
            matchLabels:
              run: client # allow form this pod only (source pod)
      ports:
        - protocol: TCP
          port: 80  # HTTP port
