ocp_manifests/networking/net-policy/allow-only-fromns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-ingress
spec:
  podSelector:
    matchLabels:
      run: web  # Targets the "web" pod
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: allowed-namespace  # Replace with the name of the allowed namespace
      ports:
        - protocol: TCP
          port: 80  # HTTP port
